--- a/MakeFile
+++ b/MakeFile
@@ -1,14 +1,19 @@
-all: count 
+compile: count 
 
 count: count.o
-		g++ count.o -o count
+	g++ count.o -o count
 
 count.o: count.cc
-		g++ -c count.cc
+	g++ -c count.cc
 
-docs:
-    @doxygen
-    @open doxygen/html/index.html
+doc/index.html: Doxyfile src/*.cpp include/*.hpp
+    doxygen Doxyfile
+
+.PHONY: doc
+	doc: doc/index.html ;
 
 clean:
-		rm -rf *o count docs
+	rm -rf *o count
+
+cleanDoc:
+		rm doc/* -rf
